Create classes for Model, see TODO notes for what needs to be implemented

--- a/a5_CoursePlanner/public/index.html
+++ b/a5_CoursePlanner/public/index.html
@@ -23,7 +23,7 @@
         <div id="left" class="sidebar">
             <h2>Department</h2>
             <p>
-                <select v-model="selectedDept">
+                <select v-a5_backend.model="selectedDept">
                     <option v-for="option in departments" :value="option">
                         {{ option.name }}
                     </option>
