--- a/a5_CoursePlanner/public/about.html
+++ b/a5_CoursePlanner/public/about.html
@@ -20,7 +20,7 @@
             <h1>About</h1>
             <p>Welcome to <strong>{{appName}}</strong>, written by <strong>{{authorName}}</strong>.</p>
             <h2>Dump Model</h2>
-            <p>Dump the model to the server's terminal (nothing appears here; just on the servers
+            <p>Dump the a5_backend.Model to the server's terminal (nothing appears here; just on the servers
                 terminal.<br/>
                 <button type="button" v-on:click="dumpModel()">
                     Dump Model
